syntax = "proto3";

package proto;

option go_package = "./proto/proto";

// IAM section
message LoginRequest {
	string login    = 1;
	string password = 2;
} 

message SignUpRequest {
	string login    = 1;
	string password = 2;
} 

message Token {
	string token    = 1;
} 
// End of IAM

// Password section
message Password {
  sint64 id = 1; 
  string name = 2; 
  string login = 3; 
  string password = 4;
}

message PasswordRequest {
  sint64 id = 1; 
}

message CreatePasswordRequest {
  string name = 1; 
  string login = 2; 
  string password = 3;
}

message UpdatePasswordRequest {
  sint64 id = 1; 
  string name = 2; 
  string login = 3; 
  string password = 4;
}
// End of Password section


service Keeper {
  // IAM
  rpc Login(LoginRequest) returns (Token);
  rpc SignUp(SignUpRequest) returns (Token);

  // Secret
  rpc GetPassword(PasswordRequest) returns (Password);
  rpc CreatePassword(CreatePasswordRequest) returns (Password);  
  rpc UpdatePassword(UpdatePasswordRequest) returns (Password);  
}